--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ endif()
 ## Find system dependencies
 find_package(Eigen3 REQUIRED)
 find_package(PCL REQUIRED QUIET COMPONENTS core features filters io segmentation surface)
+find_package(Boost REQUIRED)
 
 # find ros dependencies
 find_package(ament_cmake REQUIRED)
@@ -27,13 +28,17 @@ find_package(sensor_msgs REQUIRED)
 find_package(pcl_conversions REQUIRED)
 # add_definitions(${PCL_DEFINITIONS})
 
+#set include paths
 include_directories(
   ${PCL_INCLUDE_DIRS}
+  src/include
 )
 
+set(SOURCES src/main.cpp src/minimal_subscriber.cpp src/include/minimal_subscriber.hpp)
+
 add_executable(talker src/publisher_member_function.cpp)
-add_executable(listener src/subscriber_example.cpp)  
-  
+add_executable(listener ${SOURCES}) 
+
 target_link_libraries(talker ${PCL_LIBRARIES})
 target_link_libraries(listener ${PCL_LIBRARIES}) 
 ament_target_dependencies(talker rclcpp std_msgs)
