--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,9 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(pcl_conversions REQUIRED)
-# add_definitions(${PCL_DEFINITIONS})
+
+#link_directories(${PCL_LIBRARY_DIRS})
+#add_definitions(${PCL_DEFINITIONS})
 
 #set include paths
 include_directories(
@@ -34,18 +36,19 @@ include_directories(
   src/include
 )
 
-set(SOURCES src/main.cpp src/minimal_subscriber.cpp src/include/minimal_subscriber.hpp)
-
-add_executable(talker src/publisher_member_function.cpp)
+set(SOURCES src/main.cpp src/minimal_subscriber.cpp src/include/minimal_subscriber.hpp src/include/PointXYZVI.hpp) 
+set(POINTFILTER_SOURCES src/PointFilter.cpp src/include/PointXYZVI.hpp)
+#add_executable(talker src/publisher_member_function.cpp)
+add_executable(pointfilter ${POINTFILTER_SOURCES})
 add_executable(listener ${SOURCES}) 
 
-target_link_libraries(talker ${PCL_LIBRARIES})
+target_link_libraries(pointfilter ${PCL_LIBRARIES})
 target_link_libraries(listener ${PCL_LIBRARIES}) 
-ament_target_dependencies(talker rclcpp std_msgs)
+ament_target_dependencies(pointfilter rclcpp std_msgs pcl_conversions)
 ament_target_dependencies(listener rclcpp sensor_msgs pcl_conversions)
 
 install(TARGETS
-  talker
+  pointfilter
   listener
   DESTINATION lib/${PROJECT_NAME})
 
