TF2 listener added to PointFilter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,8 @@
         "DCMAKE",
         "deque",
         "devcontainer",
+        "EIGEN",
+        "FMCW",
         "ints",
         "noqa",
         "pytest",
