--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,8 @@
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
   <depend>pcl_conversions</depend>
   <depend>boost</depend>
   <test_depend>ament_lint_auto</test_depend>
