--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>cpp_pubsub</name>
+  <name>lidar_perception</name>
   <version>0.0.0</version>
-  <description>Sample publisher and subscriber</description>
+  <description>FMCW lidar object detection and tracking</description>
   <maintainer email="felix@todo.todo">felix</maintainer>
   <license>TODO: License declaration</license>
 
